# FreecamMod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  pre-release.yml
config/: config.ini
src/: dllmain.cpp  free_camera.cpp  free_camera.h  freecam.cpp  freecam.h
src/core/: action.h  config.cpp  config.h  debug.h  events.h  free_camera.cpp  free_camera.h  game_data.h  game_data_manager.cpp  game_data_manager.h  hook_manager.h  input.cpp  input.h  mod_context.h  settings_backup.h
src/core/config/: con_var.h  config.cpp  config.h
src/core/features/: camera_state_manager.cpp  camera_state_manager.h  daytime_update.asm  frame_stepper.cpp  frame_stepper.h  freeze_controller.h  game_state_manager.cpp  game_state_manager.h  path_recorder.cpp  path_recorder.h  speedhack.cpp  speedhack.h
src/core/game_data/: chr_dbg_flags.h  common.h  field_area.h  game_data.h  game_data_man.h  world_chr_man.h
src/core/hook/: code_cave.cpp  code_cave.h  daytime_update.asm  hook_manager.cpp  hook_manager.h
src/core/input/: action.h  action_system.h  action_type.h  input.cpp  input.h
src/core/timeline/: interpolation.h  keyframe.h  timeline.cpp  timeline.h  track.h
src/gui/: gui.cpp  gui.h  helpers.h  interpolation.h  menu_window.cpp  menu_window.h  mesh.h  notification_popup.h  overlay.cpp  overlay.h  render_object.h  timeline.h
src/hook/: code_cave.cpp  code_cave.h  dx12hook.cpp  dx12hook.h  hook_manager.cpp  hook_manager.h
src/utils/: bitflags.h  debug.cpp  debug.h  math.h  memory.h  time.h  types.cpp  types.h
(+11 files in other folders)
